nothing new, minor changes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    <main>
-        <h1>JSON Formatter & Validator</h1>
+    <h1>JSON Formatter & Validator</h1>
+    <section>
+        <h2>Input</h2>
         <textarea id="json-input" placeholder="Paste or write your JSON here..."></textarea>
         <div class="buttons">
             <button id="format-btn">Format JSON</button>
@@ -18,6 +19,6 @@
             <button id="dark-mode-toggle">Toggle Dark Mode</button>
     </div>
         <p id="error-message"></p>
-    </main>
+    </section>
 </body>
 </html>
